<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_pick"
        android:title="@string/menu_pick"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_save"
        android:title="@string/menu_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reset"
        android:title="@string/menu_reset"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
